# scratchpad

./: ChangeLog  Daemonizer.cc  Daemonizer.h  Doxyfile  LibTrace.h  Makefile.am  Makefile.in  ProgramOptions_Base.cc  ProgramOptions_Base.h  README  README.md  README.txt  TODO  Trace.cc  Trace.h  WARRANTY  aclocal.m4  ax_jpwTools.m4  config.h.in  configure  configure.ac  debBackup.pl  debUtils.pm  doxygen.tags  install.sh  jpwTools.pm  make.syscfg.mk  masterListTools.pm  msnek4k-driverd.spec  msnek4k-driverd.spec.in  msnek4k_driverd.cc  msnek4k_driverd.conf  msnek4k_driverd.xmodmap  pkgBackup.conf  pkgBackup.pl  rpmBackup.pl  rpmUtils.pm  tarBackupUtils.pm
cron/: pkgBackup.full.sh  pkgBackup.incr.sh
debian/: changelog  conffiles  control  copyright  docs  postinst  prerm  rules
examples/: msnek4k_driverd.conf
manpage/: Makefile.am  Makefile.in  msnek4k_driverd.1  msnek4k_driverd.lyx  msnek4k_driverd.sgml
msnek4kdriverd/: ChangeLog  Makefile.in  README  TODO  aclocal.m4  configure.ac  make.syscfg.mk  msnek4k-driverd.spec
msnek4kdriverd/debian/: changelog  postinst  rules
msnek4kdriverd/manpage/: docbook-refentry.layout  msnek4k_driverd.1
msnek4kdriverd/pkgTemplates/: debian.control.in  msnek4k-driverd.spec.in
msnek4kdriverd/src/: Any.cc  Any.h  Daemonizer.cc  LibTrace.h  Makefile.am  ProgramOptions_Base.cc  ProgramOptions_Base.h  X11Display.h
pkgBackup/: jpwTools.pm  pkgBackup.pl  rpmBackup.pl  rpmUtils.pm  tarBackupUtils.pm
pkgBackup/utest/: pkgBackup.conf.bad  tTarBackupUtils.pl
pkgTemplates/: debian.control.in  debian.postinst.in  msnek4k-driverd.spec.in
src/: 90x11-msnek4k_driverd.in  Daemonizer.h  LinuxInputDevice.cc  LinuxInputDevice.h  LinuxInputEvent.cc  LinuxInputEvent.h  Makefile.am  Makefile.in  Timer.h  Trace.cc  Trace.h  X11Display.h  msnek4k_driverd.cc
utest/: pkgBackup.conf.bad  tDebUtils.pl  tRpmUtils.pl  tTarBackupUtils.pl
