##                                               -*- Makefile -*-
## Process this file with automake to produce Makefile.in
## 
## (Note:  Use double-comments with autoconf files.)
## 
## RCS $Id: Makefile.am 0 2010-02-19 00:30:13Z candide $
#############


SUBDIRS = src


## [jpw]  Custom rules
##
sysconf_DATA = examples/msnek4k_driverd.conf
nobase_doc_DATA = LICENSE WARRANTY INSTALL examples/*
