##                                               -*- Makefile -*-
## Process this file with automake to produce Makefile.in
## 
## (Note:  Use double-comments with autoconf files.)
## 
## $Id$
#############


SUBDIRS = src

sysconf_DATA = examples/msnek4k_driverd.conf
nobase_doc_DATA = LICENSE WARRANTY INSTALL examples/*
